# notes-cli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: Cli.cpp  Cli.h  NotesApp.cpp  NotesApp.h  main.cpp
src/app/: NotesApp.cpp  NotesApp.h
src/cli/: Cli.cpp  Cli.h
src/model/: Note.h
src/storage/: JsonNoteStore.cpp  JsonNoteStore.h  NotesState.h
tests/: CMakeLists.txt  json_store_tests.cpp
